test/apps/errors/__sapper__/build/client/throw.1e47a8eb.js
import { S as SvelteComponent, i as init, s as safe_not_equal, n as noop } from './chunk.e83f0b4f.js';

/* test/apps/errors/src/routes/throw.svelte generated by Svelte v3.6.9 */

function create_fragment(ctx) {
	return {
		c: noop,
		l: noop,
		m: noop,
		p: noop,
		i: noop,
		o: noop,
		d: noop
	};
}

function preload() {
	throw new Error('nope');
}

class Throw extends SvelteComponent {
	constructor(options) {
		super();
		init(this, options, null, create_fragment, safe_not_equal, []);
	}
}

export default Throw;
export { preload };
